--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,7 +15,7 @@ workflows:
         vars:
           XCODE_PROJECT: "CrazyBirdEggs.xcodeproj" # <-- Put the name of your workspace here.
           XCODE_SCHEME: "CrazyBirdEggs" # <-- Put the name of your scheme here.
-          BUNDLE_ID: "com.foxwood.online" # <-- Put your Bundle Id here.
+          BUNDLE_ID: "com.crazybirdgame.eggs" # <-- Put your Bundle Id here.
           APP_STORE_APPLE_ID: 6743075101 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
         xcode: latest # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
         cocoapods: default
